fix - Fixing an all inconsistencies on mobile and tablet devices

--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -181,6 +181,6 @@
 
 @media only screen and (max-width: 26.25em) {
   .nav-list {
-    top: 105px;
+    top: 84px;
   }
 }
